flickering bug fixed

--- a/src/components/blocks/block-types/block/Block.module.css
+++ b/src/components/blocks/block-types/block/Block.module.css
@@ -5,6 +5,7 @@
     background-color: var(--color-primary);
     margin-bottom: 1rem;
     border: 0.1rem solid var(--color-primary);
+    user-select: none;
 }
 
 .selectedBlock {
@@ -21,6 +22,7 @@
     background-color: var(--color-primary);
     cursor: pointer;
     border-radius: 0.5rem;
+    user-select: none;
 }
 
 .removeBtn {
